[package]
name = "proxybench"
version = "0.1.0"
authors = ["Maximilian Hils <git@maximilianhils.com>"]
edition = "2018"

[dependencies]
criterion = "0.3"
rcgen = "0.8"
rustls = { version = "0.18" }
hyper = "0.13"
hyper-tls = "0.4"
native-tls = "0.2"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.14"
futures = "0.3"

[[bench]]
name = "proxybench"
harness = false