[package]
name = "proxybench"
version = "0.1.0"
authors = ["Maximilian Hils <git@maximilianhils.com>"]
edition = "2018"

[dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
rcgen = "0.13.1"
rustls = { version = "0.23.16" }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
futures = "0.3"
futures-util = "0.3"
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
log = "0.4.22"
env_logger = "0.11.5"
bon = "3.0.0"

[[bench]]
name = "proxybench"
harness = false
